--- a/Modeller/src/Modeller.Core/Modeller.Core.csproj
+++ b/Modeller/src/Modeller.Core/Modeller.Core.csproj
@@ -18,16 +18,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="netstandard2.0.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="netstandard2.0.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Humanizer.Core" Version="2.5.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Runtime" Version="4.3.0" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="netstandard2.0.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
