--- a/Modeller/appveyor.yml
+++ b/Modeller/appveyor.yml
@@ -1,5 +1,7 @@
-Download appveyor.yml
-version: 1.0.0.{build}
+n: 1.0.0.{build}
+branches:
+  only:
+  - master
 image: Visual Studio 2017
 dotnet_csproj:
   patch: true
@@ -9,24 +11,28 @@ dotnet_csproj:
   assembly_version: '{version}'
   file_version: '{version}'
   informational_version: '{version}'
+nuget:
+  account_feed: true
+  disable_publish_on_pr: true
 before_build:
 - cmd: >-
     dotnet --version
 
-    dotnet restore ./modeller/src/modeller.base/hy.modeller.base.csproj --verbosity m
+    dotnet restore ./modeller/src/modeller.base/hy.modeller.base.csproj
 
-    dotnet restore ./modeller/src/modeller.core/hy.modeller.core.csproj --verbosity m
+    dotnet restore ./modeller/src/modeller.core/hy.modeller.core.csproj
 
-    dotnet restore ./modeller/src/modeller.fluent/hy.modeller.fluent.csproj --verbosity m
+    dotnet restore ./modeller/src/modeller.fluent/hy.modeller.fluent.csproj
 
-    dotnet restore ./modeller/tests/modeller.Tests/modeller.tests.csproj --verbosity m
+    dotnet restore ./modeller/tests/modeller.Tests/modeller.tests.csproj
 
-    dotnet restore ./modeller/tests/TestGenerator/testgenerator.csproj --verbosity m
+    dotnet restore ./modeller/tests/TestGenerator/testgenerator.csproj
 build:
   publish_nuget: true
   publish_nuget_symbols: true
-  include_nuget_references: true
   verbosity: normal
+artifacts:
+- path: '**/*.nupkg'
 notifications:
 - provider: Email
   to:
