--- a/Modeller/generators/ClassLibrary.v1.0/ClassLibrary.v1.0.csproj
+++ b/Modeller/generators/ClassLibrary.v1.0/ClassLibrary.v1.0.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>F:\Repos\Modeller\Modeller\generators\Generator\</OutputPath>
+    <OutputPath></OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
