--- a/Modeller/src/Modeller-tool/Modeller-tool.csproj
+++ b/Modeller/src/Modeller-tool/Modeller-tool.csproj
@@ -18,6 +18,7 @@
     <FileVersion>0.1.0.0</FileVersion>
     <RootNamespace>Hy.Modeller.Cli</RootNamespace>
     <LangVersion>7.3</LangVersion>
+    <PackageId>Hy.Modeller.Tool</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
