Added the Version attribute in the csproj files to ensure AppVeyor can patch that version number.

--- a/Modeller/src/Modeller.Core/Hy.Modeller.Core.csproj
+++ b/Modeller/src/Modeller.Core/Hy.Modeller.Core.csproj
@@ -15,6 +15,7 @@
     <DelaySign>false</DelaySign>
     <AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
     <RootNamespace>Hy.Modeller.Core</RootNamespace>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
