--- a/Modeller/generators/ClassLibrary.v1.0/ClassLibrary.v1.0.csproj
+++ b/Modeller/generators/ClassLibrary.v1.0/ClassLibrary.v1.0.csproj
@@ -3,13 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>ClassLibrary</RootNamespace>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Allan Nielsen</Authors>
     <Company>Hybrid Solution</Company>
     <Description>Generator to create a POCO class</Description>
     <Copyright>Copyright {year}</Copyright>
     <PackageTags>C# HY Code Generator</PackageTags>
     <NeutralLanguage>en-AU</NeutralLanguage>
+    <PackageId>Hy.Modeller.Generator.ClassLibrary</PackageId>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
