--- a/Modeller/src/Modeller-tool/Modeller-tool.csproj
+++ b/Modeller/src/Modeller-tool/Modeller-tool.csproj
@@ -19,6 +19,7 @@
     <RootNamespace>Hy.Modeller.Cli</RootNamespace>
     <LangVersion>7.3</LangVersion>
     <PackageId>Hy.Modeller.Tool</PackageId>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
