--- a/Modeller/src/Modeller.Base/Hy.Modeller.Base.csproj
+++ b/Modeller/src/Modeller.Base/Hy.Modeller.Base.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -9,6 +9,7 @@
     <Authors>Allan Nielsen</Authors>
     <Copyright>Copyright © 2018</Copyright>
     <PackageTags>CodeGen, C#</PackageTags>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
