--- a/Modeller/src/Modeller.Fluent/Hy.Modeller.Fluent.csproj
+++ b/Modeller/src/Modeller.Fluent/Hy.Modeller.Fluent.csproj
@@ -10,6 +10,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>CodeGen, C#, Fluent</PackageTags>
     <NeutralLanguage>English (Australia)</NeutralLanguage>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
