--- a/Modeller/src/Modeller-tool/Modeller-tool.csproj
+++ b/Modeller/src/Modeller-tool/Modeller-tool.csproj
@@ -23,9 +23,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hy.Modeller.Core" Version="1.0.29" />
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.0-rc.460" />
-    <PackageReference Include="McMaster.Extensions.Hosting.CommandLine" Version="2.3.0-rc.460" />
+    <PackageReference Include="Hy.Modeller.Core" Version="2.1.3" />
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.0" />
+    <PackageReference Include="McMaster.Extensions.Hosting.CommandLine" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
