--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,4 @@
 version: 2.0.{build}
-branches:
-  only:
-  - master
 image: Visual Studio 2017
 dotnet_csproj:
   patch: true
@@ -12,14 +9,14 @@ dotnet_csproj:
   file_version: '{version}'
   informational_version: '{version}'
 nuget:
-  account_feed: true
   disable_publish_on_pr: true
 before_build:
 - cmd: >-
     dotnet --version
 
-    dotnet restore ./modeller/src/modeller-tool.csproj
+    dotnet restore ./modeller/Modeller-tool.sln
 build:
+  project: ./modeller/modeller-tool.sln
   publish_nuget: true
   publish_nuget_symbols: true
   verbosity: normal
