--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,6 @@
 version: 2.0.{build}
-image: Visual Studio 2017
+skip_tags: true
+image: Visual Studio 2019
 dotnet_csproj:
   patch: true
   file: '**\*.csproj'
